updated typing for some methods of QueryBuilder